feat: layot page

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -11,21 +11,23 @@
     <div class="shadow p-3 bg-white sticky-top ">
       <span class="logo p-2">B</span>
       <span class="title"">Bootstrap</span>
+      <i>vs. 4.3.1</i>
     </div>
     <div class="mx-2">
       <div class="row">
         <div class="col-2 menu shadow">
-          <div class="nav flex-column nav-pills mt-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <a class="nav-link link-active" href="/">Thành Viên</a>
-            <a class="nav-link link" href="/setup">Cài Đặt</a>
-            <a class="nav-link link" href="#v-pills-profile1">Bố Trí</a>
-            <a class="nav-link link" href="#v-pills-profile1">Lưu ý</a>
-            <a class="nav-link link" href="#v-pills-profile1">Plugin vsCode</a>
-            <a class="nav-link link" href="#v-pills-profile2">Theme</a>
+          <div class="position-fixed nav flex-column nav-pills mt-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link link-active" href="/">Introduce</a>
+            <a class="nav-link link" href="/setup">Setup</a>
+            <a class="nav-link link" href="/layout">Layout</a>
+            <a class="nav-link link" href="/content">Content</a>
+            <a class="nav-link link" href="/components">Components</a>
+            <a class="nav-link link" href="/utilities">Utilities</a>
+            <a class="nav-link link" href="/extend">Extend</a>
           </div>
         </div>
         <div class="col-10">
-          <div class="tab-content content mt-3">
+          <div class="tab-content content mt-4">
             <div class="row">
               <div class="col-2">
                 <img src="/static/images/female1.png"  class="avatar">
@@ -50,6 +52,7 @@
                 1512560  -  Nguyễn Thụy Vy Thư
               </div>
             </div>
+            <div class="footer" />
           </div>
         </div>
       </div>
