feat: change menu

--- a/pages/setup.html
+++ b/pages/setup.html
@@ -25,8 +25,7 @@
             <a class="nav-link link" href="/layout">Layout</a>
             <a class="nav-link link" href="/content">Content</a>
             <a class="nav-link link" href="/components">Components</a>
-            <a class="nav-link link" href="/utilities">Utilities</a>
-            <a class="nav-link link" href="/extend">Extend</a>
+            <a class="nav-link link" href="/application">Application</a>
           </div>
         </div>
         <div class="col-10">
