feat: add news and table

--- a/pages/components.html
+++ b/pages/components.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/png" href="/static/images/logo.png" />
   <link rel="stylesheet" type="text/css" href="/static/styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+  <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-  <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-</head>
 
 <body>
   <div class="shadow p-3 bg-white sticky-top ">
@@ -170,7 +170,10 @@
           </div>
         </div>
       </div>
-  </div>
-</body>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </body>
 
 </html>
