--- a/pages/setup.html
+++ b/pages/setup.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/png" href="/static/images/logo.png" />
   <link rel="stylesheet" type="text/css" href="/static/styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+  <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-  <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -57,10 +58,10 @@
               </div>
               <li>Offline</li>
               <div>
-                Download
-                <p class="link-http">
-                  https://getbootstrap.com/docs/4.3/getting-started/download/
-                </p>
+                Download:
+                <a href="https://getbootstrap.com/docs/4.3/getting-started/download/" target="_black">
+                  <i>https://getbootstrap.com/docs/4.3/getting-started/download/</i>
+                </a>
               </div>
               <div class="code">
                 <pre>
@@ -81,6 +82,9 @@
         </div>
       </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
