--- a/pages/intro.html
+++ b/pages/intro.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="/static/images/logo.png"/>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
-    <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-    <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>    
+    <!-- <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+  <script type="text/javascript" src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script> -->
+  <link rel="stylesheet" type="text/css" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">   
   </head>
   <body>
     <div class="shadow p-3 bg-white sticky-top ">
@@ -56,5 +57,8 @@
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
