--- a/pages/application.html
+++ b/pages/application.html
@@ -239,7 +239,54 @@
                   </nav>
                 </div>
               </div>
-              <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">con</div>
+              <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                <div class="m-3 p-2 bg-transparent">
+                  <div class="bg-info text-white">
+                    <h3 class="p-2">Sample form</h3>
+                  </div>
+                  <div class=" p-2 bg-white">
+                    <form>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="form-group">
+                            <label for="first-name">First Name</label>
+                            <input id="first-name" type="text" class="form-control" placeholder="Deutch">
+                          </div>
+                          <div class="form-group">
+                            <label for="gender">Gender</label>
+                            <select class="form-control border border-info" id="gender">
+                              <option>Male</option>
+                              <option>Female</option>
+                            </select>
+                            <small class="form-text text-info">Select your gender</small>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="form-group">
+                            <label>Last Name</label>
+                            <input type="text" class="form-control" placeholder="Zoey" ">
+                          </div>  
+                          <div class="form-group">
+                            <label>Date of Birth</label>
+                            <input type="date" class="form-control border border-success">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label>Address</label>
+                        <input type="text" class="form-control border border-warning">
+                      </div>
+                      <div class="form-group d-flex justify-content-end">
+                        <button class="mr-3 btn btn-info">
+                          <span class="spinner-border spinner-border-sm text-white"></span>
+                          Save
+                        </button>
+                        <button class="btn btn-warning">Cancel</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="footer" />
           </div>
